Phase2_152/y.output
Terminals unused in grammar

   FOR


Grammar

    0 $accept: prog_start $end

    1 prog_start: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    5 declarations: %empty
    6             | declaration SEMICOLON declarations

    7 declaration: identifiers COLON INTEGER
    8            | identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | identifiers COLON ENUM L_PAREN identifiers R_PAREN

   10 identifiers: ident
   11            | ident COMMA identifiers

   12 ident: IDENT

   13 statements: %empty
   14           | statement SEMICOLON statements

   15 statement: vars ASSIGN expression
   16          | IF bool_exp THEN statements ENDIF
   17          | IF bool_exp THEN statements ELSE statements ENDIF
   18          | WHILE bool_exp BEGINLOOP statements ENDLOOP
   19          | DO BEGINLOOP statements ENDLOOP WHILE bool_exp
   20          | READ vars
   21          | WRITE vars
   22          | CONTINUE
   23          | RETURN expression

   24 bool_exp: relation_and_expr
   25         | relation_and_expr OR bool_exp

   26 relation_and_expr: relation_expr
   27                  | relation_expr AND relation_and_expr

   28 relation_expr: NOT expression comp expression
   29              | NOT TRUE
   30              | NOT FALSE
   31              | NOT L_PAREN bool_exp R_PAREN
   32              | expression comp expression
   33              | TRUE
   34              | FALSE
   35              | L_PAREN bool_exp R_PAREN

   36 comp: EQ
   37     | NEQ
   38     | LT
   39     | GT
   40     | LTE
   41     | GTE

   42 expressions: expression
   43            | expression COMMA expressions

   44 expression: multiplicative_expr
   45           | multiplicative_expr ADD expression
   46           | multiplicative_expr SUB expression

   47 multiplicative_expr: term
   48                    | term MULT multiplicative_expr
   49                    | term DIV multiplicative_expr
   50                    | term MOD multiplicative_expr

   51 term: var
   52     | SUB var
   53     | NUMBER
   54     | SUB NUMBER
   55     | L_PAREN expression R_PAREN
   56     | SUB L_PAREN expression R_PAREN
   57     | ident L_PAREN R_PAREN
   58     | ident L_PAREN expressions R_PAREN

   59 vars: var
   60     | var COMMA vars

   61 var: ident
   62    | ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4
BEGIN_PARAMS (259) 4
END_PARAMS (260) 4
BEGIN_LOCALS (261) 4
END_LOCALS (262) 4
BEGIN_BODY (263) 4
END_BODY (264) 4
INTEGER (265) 7 8
ARRAY (266) 8
OF (267) 8
IF (268) 16 17
THEN (269) 16 17
ENDIF (270) 16 17
ELSE (271) 17
WHILE (272) 18 19
FOR (273)
DO (274) 19
BEGINLOOP (275) 18 19
ENDLOOP (276) 18 19
CONTINUE (277) 22
READ (278) 20
WRITE (279) 21
TRUE (280) 29 33
FALSE (281) 30 34
SEMICOLON (282) 4 6 14
COLON (283) 7 8 9
COMMA (284) 11 43 60
L_PAREN (285) 9 31 35 55 56 57 58
R_PAREN (286) 9 31 35 55 56 57 58
L_SQUARE_BRACKET (287) 8 62
R_SQUARE_BRACKET (288) 8 62
ASSIGN (289) 15
RETURN (290) 23
ENUM (291) 9
IDENT (292) 12
NUMBER (293) 8 53 54
OR (294) 25
AND (295) 27
NOT (296) 28 29 30 31
LT (297) 38
LTE (298) 40
GT (299) 39
GTE (300) 41
EQ (301) 36
NEQ (302) 37
ADD (303) 45
SUB (304) 46 52 54 56
MULT (305) 48
DIV (306) 49
MOD (307) 50


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
prog_start (54)
    on left: 1, on right: 0
functions (55)
    on left: 2 3, on right: 1 3
function (56)
    on left: 4, on right: 3
declarations (57)
    on left: 5 6, on right: 4 6
declaration (58)
    on left: 7 8 9, on right: 6
identifiers (59)
    on left: 10 11, on right: 7 8 9 11
ident (60)
    on left: 12, on right: 4 10 11 57 58 61 62
statements (61)
    on left: 13 14, on right: 4 14 16 17 18 19
statement (62)
    on left: 15 16 17 18 19 20 21 22 23, on right: 14
bool_exp (63)
    on left: 24 25, on right: 16 17 18 19 25 31 35
relation_and_expr (64)
    on left: 26 27, on right: 24 25 27
relation_expr (65)
    on left: 28 29 30 31 32 33 34 35, on right: 26 27
comp (66)
    on left: 36 37 38 39 40 41, on right: 28 32
expressions (67)
    on left: 42 43, on right: 43 58
expression (68)
    on left: 44 45 46, on right: 15 23 28 32 42 43 45 46 55 56 62
multiplicative_expr (69)
    on left: 47 48 49 50, on right: 44 45 46 48 49 50
term (70)
    on left: 51 52 53 54 55 56 57 58, on right: 47 48 49 50
vars (71)
    on left: 59 60, on right: 15 20 21 60
var (72)
    on left: 61 62, on right: 51 52 59 60


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    prog_start  go to state 2
    functions   go to state 3
    function    go to state 4


State 1

    4 function: FUNCTION . ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    ident  go to state 6


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 3

    1 prog_start: functions .

    $default  reduce using rule 1 (prog_start)


State 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 8
    function   go to state 4


State 5

   12 ident: IDENT .

    $default  reduce using rule 12 (ident)


State 6

    4 function: FUNCTION ident . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 9


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 9

    4 function: FUNCTION ident SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 10


State 10

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 11
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 11

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 15


State 12

    6 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 16


State 13

    7 declaration: identifiers . COLON INTEGER
    8            | identifiers . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | identifiers . COLON ENUM L_PAREN identifiers R_PAREN

    COLON  shift, and go to state 17


State 14

   10 identifiers: ident .
   11            | ident . COMMA identifiers

    COMMA  shift, and go to state 18

    $default  reduce using rule 10 (identifiers)


State 15

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 19


State 16

    6 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 20
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 17

    7 declaration: identifiers COLON . INTEGER
    8            | identifiers COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | identifiers COLON . ENUM L_PAREN identifiers R_PAREN

    INTEGER  shift, and go to state 21
    ARRAY    shift, and go to state 22
    ENUM     shift, and go to state 23


State 18

   11 identifiers: ident COMMA . identifiers

    IDENT  shift, and go to state 5

    identifiers  go to state 24
    ident        go to state 14


State 19

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 25
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 20

    6 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 6 (declarations)


State 21

    7 declaration: identifiers COLON INTEGER .

    $default  reduce using rule 7 (declaration)


State 22

    8 declaration: identifiers COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 26


State 23

    9 declaration: identifiers COLON ENUM . L_PAREN identifiers R_PAREN

    L_PAREN  shift, and go to state 27


State 24

   11 identifiers: ident COMMA identifiers .

    $default  reduce using rule 11 (identifiers)


State 25

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statements END_BODY

    END_LOCALS  shift, and go to state 28


State 26

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 29


State 27

    9 declaration: identifiers COLON ENUM L_PAREN . identifiers R_PAREN

    IDENT  shift, and go to state 5

    identifiers  go to state 30
    ident        go to state 14


State 28

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statements END_BODY

    BEGIN_BODY  shift, and go to state 31


State 29

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 32


State 30

    9 declaration: identifiers COLON ENUM L_PAREN identifiers . R_PAREN

    R_PAREN  shift, and go to state 33


State 31

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statements END_BODY

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 42
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 32

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 46


State 33

    9 declaration: identifiers COLON ENUM L_PAREN identifiers R_PAREN .

    $default  reduce using rule 9 (declaration)


State 34

   16 statement: IF . bool_exp THEN statements ENDIF
   17          | IF . bool_exp THEN statements ELSE statements ENDIF

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    bool_exp             go to state 54
    relation_and_expr    go to state 55
    relation_expr        go to state 56
    expression           go to state 57
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 35

   18 statement: WHILE . bool_exp BEGINLOOP statements ENDLOOP

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    bool_exp             go to state 61
    relation_and_expr    go to state 55
    relation_expr        go to state 56
    expression           go to state 57
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 36

   19 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_exp

    BEGINLOOP  shift, and go to state 62


State 37

   22 statement: CONTINUE .

    $default  reduce using rule 22 (statement)


State 38

   20 statement: READ . vars

    IDENT  shift, and go to state 5

    ident  go to state 41
    vars   go to state 63
    var    go to state 45


State 39

   21 statement: WRITE . vars

    IDENT  shift, and go to state 5

    ident  go to state 41
    vars   go to state 64
    var    go to state 45


State 40

   23 statement: RETURN . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 66
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 41

   61 var: ident .
   62    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 67

    $default  reduce using rule 61 (var)


State 42

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements . END_BODY

    END_BODY  shift, and go to state 68


State 43

   14 statements: statement . SEMICOLON statements

    SEMICOLON  shift, and go to state 69


State 44

   15 statement: vars . ASSIGN expression

    ASSIGN  shift, and go to state 70


State 45

   59 vars: var .
   60     | var . COMMA vars

    COMMA  shift, and go to state 71

    $default  reduce using rule 59 (vars)


State 46

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 72


State 47

   33 relation_expr: TRUE .

    $default  reduce using rule 33 (relation_expr)


State 48

   34 relation_expr: FALSE .

    $default  reduce using rule 34 (relation_expr)


State 49

   35 relation_expr: L_PAREN . bool_exp R_PAREN
   55 term: L_PAREN . expression R_PAREN

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    bool_exp             go to state 73
    relation_and_expr    go to state 55
    relation_expr        go to state 56
    expression           go to state 74
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 50

   53 term: NUMBER .

    $default  reduce using rule 53 (term)


State 51

   28 relation_expr: NOT . expression comp expression
   29              | NOT . TRUE
   30              | NOT . FALSE
   31              | NOT . L_PAREN bool_exp R_PAREN

    TRUE     shift, and go to state 75
    FALSE    shift, and go to state 76
    L_PAREN  shift, and go to state 77
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 78
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 52

   52 term: SUB . var
   54     | SUB . NUMBER
   56     | SUB . L_PAREN expression R_PAREN

    L_PAREN  shift, and go to state 79
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 80

    ident  go to state 41
    var    go to state 81


State 53

   57 term: ident . L_PAREN R_PAREN
   58     | ident . L_PAREN expressions R_PAREN
   61 var: ident .
   62    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 82
    L_SQUARE_BRACKET  shift, and go to state 67

    $default  reduce using rule 61 (var)


State 54

   16 statement: IF bool_exp . THEN statements ENDIF
   17          | IF bool_exp . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 83


State 55

   24 bool_exp: relation_and_expr .
   25         | relation_and_expr . OR bool_exp

    OR  shift, and go to state 84

    $default  reduce using rule 24 (bool_exp)


State 56

   26 relation_and_expr: relation_expr .
   27                  | relation_expr . AND relation_and_expr

    AND  shift, and go to state 85

    $default  reduce using rule 26 (relation_and_expr)


State 57

   32 relation_expr: expression . comp expression

    LT   shift, and go to state 86
    LTE  shift, and go to state 87
    GT   shift, and go to state 88
    GTE  shift, and go to state 89
    EQ   shift, and go to state 90
    NEQ  shift, and go to state 91

    comp  go to state 92


State 58

   44 expression: multiplicative_expr .
   45           | multiplicative_expr . ADD expression
   46           | multiplicative_expr . SUB expression

    ADD  shift, and go to state 93
    SUB  shift, and go to state 94

    $default  reduce using rule 44 (expression)


State 59

   47 multiplicative_expr: term .
   48                    | term . MULT multiplicative_expr
   49                    | term . DIV multiplicative_expr
   50                    | term . MOD multiplicative_expr

    MULT  shift, and go to state 95
    DIV   shift, and go to state 96
    MOD   shift, and go to state 97

    $default  reduce using rule 47 (multiplicative_expr)


State 60

   51 term: var .

    $default  reduce using rule 51 (term)


State 61

   18 statement: WHILE bool_exp . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 98


State 62

   19 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_exp

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 99
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 63

   20 statement: READ vars .

    $default  reduce using rule 20 (statement)


State 64

   21 statement: WRITE vars .

    $default  reduce using rule 21 (statement)


State 65

   55 term: L_PAREN . expression R_PAREN

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 100
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 66

   23 statement: RETURN expression .

    $default  reduce using rule 23 (statement)


State 67

   62 var: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 101
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 68

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY .

    $default  reduce using rule 4 (function)


State 69

   14 statements: statement SEMICOLON . statements

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 102
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 70

   15 statement: vars ASSIGN . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 103
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 71

   60 vars: var COMMA . vars

    IDENT  shift, and go to state 5

    ident  go to state 41
    vars   go to state 104
    var    go to state 45


State 72

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 8 (declaration)


State 73

   35 relation_expr: L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 105


State 74

   32 relation_expr: expression . comp expression
   55 term: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 106
    LT       shift, and go to state 86
    LTE      shift, and go to state 87
    GT       shift, and go to state 88
    GTE      shift, and go to state 89
    EQ       shift, and go to state 90
    NEQ      shift, and go to state 91

    comp  go to state 92


State 75

   29 relation_expr: NOT TRUE .

    $default  reduce using rule 29 (relation_expr)


State 76

   30 relation_expr: NOT FALSE .

    $default  reduce using rule 30 (relation_expr)


State 77

   31 relation_expr: NOT L_PAREN . bool_exp R_PAREN
   55 term: L_PAREN . expression R_PAREN

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    bool_exp             go to state 107
    relation_and_expr    go to state 55
    relation_expr        go to state 56
    expression           go to state 74
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 78

   28 relation_expr: NOT expression . comp expression

    LT   shift, and go to state 86
    LTE  shift, and go to state 87
    GT   shift, and go to state 88
    GTE  shift, and go to state 89
    EQ   shift, and go to state 90
    NEQ  shift, and go to state 91

    comp  go to state 108


State 79

   56 term: SUB L_PAREN . expression R_PAREN

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 109
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 80

   54 term: SUB NUMBER .

    $default  reduce using rule 54 (term)


State 81

   52 term: SUB var .

    $default  reduce using rule 52 (term)


State 82

   57 term: ident L_PAREN . R_PAREN
   58     | ident L_PAREN . expressions R_PAREN

    L_PAREN  shift, and go to state 65
    R_PAREN  shift, and go to state 110
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expressions          go to state 111
    expression           go to state 112
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 83

   16 statement: IF bool_exp THEN . statements ENDIF
   17          | IF bool_exp THEN . statements ELSE statements ENDIF

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 113
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 84

   25 bool_exp: relation_and_expr OR . bool_exp

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    bool_exp             go to state 114
    relation_and_expr    go to state 55
    relation_expr        go to state 56
    expression           go to state 57
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 85

   27 relation_and_expr: relation_expr AND . relation_and_expr

    TRUE     shift, and go to state 47
    FALSE    shift, and go to state 48
    L_PAREN  shift, and go to state 49
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    NOT      shift, and go to state 51
    SUB      shift, and go to state 52

    ident                go to state 53
    relation_and_expr    go to state 115
    relation_expr        go to state 56
    expression           go to state 57
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 86

   38 comp: LT .

    $default  reduce using rule 38 (comp)


State 87

   40 comp: LTE .

    $default  reduce using rule 40 (comp)


State 88

   39 comp: GT .

    $default  reduce using rule 39 (comp)


State 89

   41 comp: GTE .

    $default  reduce using rule 41 (comp)


State 90

   36 comp: EQ .

    $default  reduce using rule 36 (comp)


State 91

   37 comp: NEQ .

    $default  reduce using rule 37 (comp)


State 92

   32 relation_expr: expression comp . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 116
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 93

   45 expression: multiplicative_expr ADD . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 117
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 94

   46 expression: multiplicative_expr SUB . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 118
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 95

   48 multiplicative_expr: term MULT . multiplicative_expr

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    multiplicative_expr  go to state 119
    term                 go to state 59
    var                  go to state 60


State 96

   49 multiplicative_expr: term DIV . multiplicative_expr

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    multiplicative_expr  go to state 120
    term                 go to state 59
    var                  go to state 60


State 97

   50 multiplicative_expr: term MOD . multiplicative_expr

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    multiplicative_expr  go to state 121
    term                 go to state 59
    var                  go to state 60


State 98

   18 statement: WHILE bool_exp BEGINLOOP . statements ENDLOOP

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 122
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 99

   19 statement: DO BEGINLOOP statements . ENDLOOP WHILE bool_exp

    ENDLOOP  shift, and go to state 123


State 100

   55 term: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 106


State 101

   62 var: ident L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 124


State 102

   14 statements: statement SEMICOLON statements .

    $default  reduce using rule 14 (statements)


State 103

   15 statement: vars ASSIGN expression .

    $default  reduce using rule 15 (statement)


State 104

   60 vars: var COMMA vars .

    $default  reduce using rule 60 (vars)


State 105

   35 relation_expr: L_PAREN bool_exp R_PAREN .

    $default  reduce using rule 35 (relation_expr)


State 106

   55 term: L_PAREN expression R_PAREN .

    $default  reduce using rule 55 (term)


State 107

   31 relation_expr: NOT L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 125


State 108

   28 relation_expr: NOT expression comp . expression

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expression           go to state 126
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 109

   56 term: SUB L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 127


State 110

   57 term: ident L_PAREN R_PAREN .

    $default  reduce using rule 57 (term)


State 111

   58 term: ident L_PAREN expressions . R_PAREN

    R_PAREN  shift, and go to state 128


State 112

   42 expressions: expression .
   43            | expression . COMMA expressions

    COMMA  shift, and go to state 129

    $default  reduce using rule 42 (expressions)


State 113

   16 statement: IF bool_exp THEN statements . ENDIF
   17          | IF bool_exp THEN statements . ELSE statements ENDIF

    ENDIF  shift, and go to state 130
    ELSE   shift, and go to state 131


State 114

   25 bool_exp: relation_and_expr OR bool_exp .

    $default  reduce using rule 25 (bool_exp)


State 115

   27 relation_and_expr: relation_expr AND relation_and_expr .

    $default  reduce using rule 27 (relation_and_expr)


State 116

   32 relation_expr: expression comp expression .

    $default  reduce using rule 32 (relation_expr)


State 117

   45 expression: multiplicative_expr ADD expression .

    $default  reduce using rule 45 (expression)


State 118

   46 expression: multiplicative_expr SUB expression .

    $default  reduce using rule 46 (expression)


State 119

   48 multiplicative_expr: term MULT multiplicative_expr .

    $default  reduce using rule 48 (multiplicative_expr)


State 120

   49 multiplicative_expr: term DIV multiplicative_expr .

    $default  reduce using rule 49 (multiplicative_expr)


State 121

   50 multiplicative_expr: term MOD multiplicative_expr .

    $default  reduce using rule 50 (multiplicative_expr)


State 122

   18 statement: WHILE bool_exp BEGINLOOP statements . ENDLOOP

    ENDLOOP  shift, and go to state 132


State 123

   19 statement: DO BEGINLOOP statements ENDLOOP . WHILE bool_exp

    WHILE  shift, and go to state 133


State 124

   62 var: ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET .

    $default  reduce using rule 62 (var)


State 125

   31 relation_expr: NOT L_PAREN bool_exp R_PAREN .

    $default  reduce using rule 31 (relation_expr)


State 126

   28 relation_expr: NOT expression comp expression .

    $default  reduce using rule 28 (relation_expr)


State 127

   56 term: SUB L_PAREN expression R_PAREN .

    $default  reduce using rule 56 (term)


State 128

   58 term: ident L_PAREN expressions R_PAREN .

    $default  reduce using rule 58 (term)


State 129

   43 expressions: expression COMMA . expressions

    L_PAREN  shift, and go to state 65
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 50
    SUB      shift, and go to state 52

    ident                go to state 53
    expressions          go to state 134
    expression           go to state 112
    multiplicative_expr  go to state 58
    term                 go to state 59
    var                  go to state 60


State 130

   16 statement: IF bool_exp THEN statements ENDIF .

    $default  reduce using rule 16 (statement)


State 131

   17 statement: IF bool_exp THEN statements ELSE . statements ENDIF

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40
    IDENT     shift, and go to state 5

    $default  reduce using rule 13 (statements)

    ident       go to state 41
    statements  go to state 135
    statement   go to state 43
    vars        go to state 44
    var         go to state 45


State 132

   18 statement: WHILE bool_exp BEGINLOOP statements ENDLOOP .

    $default  reduce using rule 18 (statement)


State 133

   19 statement: DO BEGINLOOP statements ENDLOOP WHILE . bool_exp
